--- a/content/dispersion_presentation.qmd
+++ b/content/dispersion_presentation.qmd
@@ -60,8 +60,7 @@ See @tbl-panel for details, especially @tbl-first.
 
 ------------------------------------------------------------------------
 
-::: {.panel-tabset}
-
+::: panel-tabset
 ### Tab A
 
 ![](rpn_quadrat_count.png){.absolute top="0" right="0" width="600" height="400"}
@@ -77,10 +76,9 @@ See @tbl-panel for details, especially @tbl-first.
 : First Table {#tbl-first}
 
 Main Caption
-
 :::
 
-----
+------------------------------------------------------------------------
 
 ::: columns
 ::: {.column width="40%"}
@@ -95,7 +93,6 @@ Main Caption
 ------------------------------------------------------------------------
 
 ::: columns
-
 ::: {.column width="50%"}
 **Raw data (not transformed)**
 
@@ -128,7 +125,6 @@ plot(p_cover_mod.lm1)
 Anova(p_cover_mod.lm1, type = "III")
 ```
 :::
-
 :::
 
 ------------------------------------------------------------------------
@@ -143,13 +139,31 @@ Right column
 :::
 :::
 
-----
+------------------------------------------------------------------------
 
 ::: columns
+::: {.column width="50%"}
+**Logit-transformation**
+
+```{r}
+p_cover_mod.lm2 <- lm(logit(pland_decimal) ~ Site, data = p_cover)
+summary(p_cover_mod.lm2)
+```
+:::
 
 ::: {.column width="50%"}
+```{r}
+par(mfrow = c(2, 2))
+plot(p_cover_mod.lm2)
+```
 
-<p style="font-size:80%;">
+```{r}
+Anova(p_cover_mod.lm2, type = "III")
+```
+:::
+:::
+
+------------------------------------------------------------------------
 
 **Logit-transformation**
 
@@ -157,10 +171,6 @@ Right column
 p_cover_mod.lm2 <- lm(logit(pland_decimal) ~ Site, data = p_cover)
 summary(p_cover_mod.lm2)
 ```
-
-:::
-
-::: {.column width="50%"}
 
 ```{r}
 par(mfrow = c(2, 2))
@@ -171,6 +181,26 @@ plot(p_cover_mod.lm2)
 Anova(p_cover_mod.lm2, type = "III")
 ```
 
+------------------------------------------------------------------------
+
+::: columns
+::: {.column width="50%" style="font-size: 27px"}
+```{r}
+p_cover_mod.lm2 <- lm(logit(pland_decimal) ~ Site, data = p_cover)
+summary(p_cover_mod.lm2)
+
+
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(p_cover_mod.lm2)
+```
 :::
 
+::: {.column width="50%" style="font-size: 27px"}
+```{r}
+Anova(p_cover_mod.lm2, type = "III")
+```
+:::
 :::
