--- a/content/percent_cover.qmd
+++ b/content/percent_cover.qmd
@@ -39,6 +39,8 @@ library(qqtest)  #for uncertainty intervals in qqplot
 library(lmtest)
 ```
 
+*From* **Damgaard & Irvine (2019)** Using the beta distribution to analyse plant cover data *Journal of Ecology. 107:2747-2759*
+
 Wrote a function to create a table from `betreg` object that can be used in `xtable()`
 
 ```{r}
@@ -58,6 +60,38 @@ p_cover = read_csv('LSMclassGrid.csv') %>%
   mutate_at(vars(Site, cover, plot_id), factor)
 ```
 
+```{r}
+head(p_cover)
+```
+
+```{r}
+ggplot(p_cover, aes(x = pland_decimal)) +
+  geom_histogram(fill = "#333399") + 
+  #below here is ylabel, xlabel, and main title
+  ylab("Frequency") +
+  xlab(NULL) +
+  ggtitle(expression("Coral Cover (%)")) +
+  theme_bw() +
+  facet_wrap(~ Site, ncol = 1) +
+  #theme sets sizes, text, etc
+  theme(axis.title.x = element_text(size = 14), 
+        axis.title.y = element_text(size = 14), 
+        axis.text.y  = element_text(size= 10),
+        axis.text.x  = element_text(size = 12), 
+        legend.text = element_text(size = 12),
+        legend.title = element_text(size = 12),
+        plot.title = element_text(hjust = 0.5, size = 14),
+        # change plot background, grid lines, etc (just examples so you can see)
+        panel.background = element_rect(fill = "white"),
+        panel.grid.minor.y = element_blank(),
+        panel.grid.major = element_blank(),
+        plot.background = element_rect(fill = "white"),
+        legend.background = element_rect(fill = "white"),
+        strip.text.x = element_text(size = 12, colour = "#FFFFFF"),
+        strip.background = element_rect(fill = '#000066')
+  )
+```
+
 ::: {.fold .s}
 ```{r}
 plot(pland_decimal ~ Site, data = p_cover)
@@ -75,6 +109,8 @@ Another option for modeling the data is to use a zero-one augmented beta model. 
 Other options based on assuming that the residuals are normally distributed is to use a linear model with a logit-transformed response (object named: mod.lmlogit) or a linear model with response untransformed proportions (object named: mod.lmraw).
 
 For comparison this applies a logit-transformation to the empirical proportions and then uses a standard linear regression model.
+
+**Raw data - no transformation**
 
 ```{r}
 p_cover_mod.aov1 <- aov(pland_decimal ~ Site, data = p_cover)
@@ -111,17 +147,6 @@ plot(p_cover_mod.lm2)
 Anova(p_cover_mod.lm2, type = "III")
 ```
 
-**Beta Regression I**
-
-```{r}
-p_cover_mod.beta1 <- betareg(pland_decimal ~ Site, data = p_cover, link = c("logit"), 
-                             link.phi = NULL, type = c("ML"))
-```
-
-```{r}
-p_cover_mod.beta2 <- betareg(pland_decimal ~ Site | Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
-```
-
 **Generalized-linear model**
 
 ```{r}
@@ -138,9 +163,33 @@ plot(p_cover_mod.glm1)
 Anova(p_cover_mod.glm1, type = "III")
 ```
 
+**Beta Regression I:** $\phi$ does not vary
+
+```{r}
+p_cover_mod.beta1 <- betareg(pland_decimal ~ Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+```
+
+**Beta Regression II:** $\phi$ does vary (by **Site**)
+
+```{r}
+p_cover_mod.beta2 <- betareg(pland_decimal ~ Site | Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+```
+
+**Extract AIC from beta regression models**
+
+```{r}
+p_cover_mod.beta1_aic <- AIC(p_cover_mod.beta1)
+p_cover_mod.beta2_aic <- AIC(p_cover_mod.beta2)
+```
+
+```{r}
+p_cover_mod.beta1_aic
+p_cover_mod.beta2_aic
+```
+
 ## Interpreting results for pocilloporid corals
 
-In order to choose between the beta regression model with a common $\phi$ versus different $\phi$, I used AIC but a likelihood ratio or wald test could be used. Using AIC, the model with varying $\phi$ values had a lower AIC (-464 compared to -432) and therefore more support. We consider our simple two year or group case to explain how to interpret the output from beta regression.
+In order to choose between the beta regression model with a common $\phi$ versus different $\phi$, I used **AIC** but a *likelihood ratio* or *wald test* could be used. Using **AIC**, the model with varying $\phi$ values had a lower AIC (-1518.568 compared to -1494.524) and therefore more support. We interpret the output from beta regression with the following:
 
 The model we fit assumes $$logit(\mu_j)=\beta_0+\beta_1 Ind_{grp2},$$ where $Ind_{grp2}$ is an indicator for group 2 and $j$ denotes the group membership so $j=1$ or $j=2$. We have $logit(\mu_2)-logit(\mu_1)=\beta_1$, which is equivalent to $$log(\frac{\mu_2}{1-\mu_2})-log(\frac{\mu_1}{1-\mu_1})= \beta_1.$$
 
@@ -150,13 +199,24 @@ $$log(\frac{\mu_2}{1-\mu_2}/\frac{\mu_1}{1-\mu_1})=\beta_1$$ is the log- odds ra
 
 Then $exp(\beta_1)$ is the factor increase/decrease in odds of proportion cover for group 2 compared to group 1, where $exp(\beta_1)>1$ is an increase and $exp(\beta_1)<1$ is a decrease, and $exp(\beta_1) \approx 1$ means essentially no change.
 
+**Beta Regression I:** $\phi$ does not vary
+
 ```{r, tab-betareg, echo=FALSE, eval=T, results = 'asis'}
-p_cover_mod.beta1 <- betareg(pland_decimal ~ Site, data = p_cover, link = c("logit"), 
-                             link.phi = NULL, type = c("ML"))
+p_cover_mod.beta1 <- betareg(pland_decimal ~ Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
 
 tab.mod <- Fcn.CreateSummary.betareg(p_cover_mod.beta1)
 
 print(xtable(tab.mod, digits = 3, caption = "Results from using betareg package in R by transforming the 0 and 1's. These are on the logit-scale for $\\mu$ with a common $\\phi$ parameter"), type = "html")
+```
+
+**Beta Regression II:** $\phi$ does vary (by **Site**)
+
+```{r}
+p_cover_mod.beta2 <- betareg(pland_decimal ~ Site | Site, data = p_cover, link = c("logit"), link.phi = NULL, type = c("ML"))
+```
+
+```{r}
+summary(p_cover_mod.beta2)
 ```
 
 The function, `Fcn.CreateSummary.betareg`, doesn't work with phi varying, so just fixed labels manually.
@@ -195,8 +255,6 @@ print(xtable(summary(p_cover_mod.glm1), digits = 3, caption = " . "), type = "ht
 | (Intercept) | -4.129   | 0.822      | -5.025  | 0.000       |
 | Siteman     | 1.225    | 0.929      | 1.318   | 0.187       |
 | Sitevhu     | 3.233    | 0.833      | 3.880   | 0.000       |
-
-: .
 
 ```{r, eval = TRUE, echo=FALSE, fig.cap='Example diagnostic plots for beta regression)', fig.width = 7, fig.height = 7}
 
